@@ -1,3 +1,8 @@
+2005-11-11 Duncan Coutts <duncan@coutts.uklinux.net>
+
+	* demo/cairo/Drawing2.hs, demo/cairo/Makefile: new cairo demo thanks
+	to Johan Bockgård.
+
 2005-11-10 Duncan Coutts <duncan@coutts.uklinux.net>
 
 	* gtk/Graphics/UI/Gtk/General/StockItems.hsc: fix inverted Gtk version
